# Website

BP-AI-FlaskX/: .gitignore  DOH-DISEASE-GUIDE.csv  README.md  a.bat  app.py  automation  data.json  desktop.ini  digit_test.py  disease_diagnosis.csv  health_data.json  inf1.py  inf2.py  ingest_data.py  local_backup.db  mnist_cnn.h5  mocks.py  ocr_space_test.py  ocr_test.py  pyproject.toml  q.bat  requirements.txt  run.sh  simulate_app.py  t.bat  test_bp.py  test_local_db_standalone.py  user_manual.txt  uv.diff  verify_firestore_quick.py  verify_local_db.py  verify_logic.py  verify_retest.py  verify_status.py
BP-AI-FlaskX/classes/: Arduino.py  BP_Picture.py  Constants.py  Contec_CMS60D.py  LocalDB.py  MyData.py  OpenAI.py  PDFGen.py  VectorDB.py  Yagmail.py  firebase_helper.py  my_mnist.py  p copy.py  p.py
BP-AI-FlaskX/knowledge/: health_knowledge_sample.json  health_patterns.csv
BP-AI-FlaskX/templates/: RouteHelper.py  app_wrapper.py
BP-AI-FlaskX/utils/: autostart.bat  autostart_website.bat
BP-AI-Website/: .eslintrc.json  .gitignore  .gitmodules  README.md  WEBSITE TEPMLATE NOTES.diff  a.bat  cors.json  next.config.js  notes.diff  package-lock.json  package.json  tailwind.config.ts  test.py  tt.py
BP-AI-Website/app/: firebase.ts  layout.tsx  page.tsx
BP-AI-Website/classes/: Constants.ts  Device.ts  FH.ts  LogDevice.ts  MyUser.ts  Patient.ts  PatientRecord.ts  Physician.ts
BP-AI-Website/hooks/: useAddress.ts  useBarChartMonthly.ts  useCalculateDivHeight.ts  (+18 more)
BP-AI-arduino_nano/: .clang-format  .gitignore  LEARNINGS.diff  d.bat  desktop.ini  platformio.ini
(+227 files in other folders)
